@@ -7,7 +7,9 @@
   </parent>
   <artifactId>sessionBuilder-it</artifactId>
  
-  
+  <properties>
+  	<swing.test.jvm.args>--add-opens java.base/java.util=ALL-UNNAMED</swing.test.jvm.args>
+  </properties>
   <dependencies>
   	<dependency>
   		<groupId>org.testcontainers</groupId>
