@@ -7,6 +7,9 @@
   </parent>
   <artifactId>sessionBuilder-swing</artifactId>
   
+  <properties>
+  	<swing.test.jvm.args>--add-opens java.base/java.util=ALL-UNNAMED</swing.test.jvm.args>
+  </properties>
   <dependencies>
   	<dependency>
 		<groupId>org.apache.logging.log4j</groupId>
